Tue Nov 11 08:02:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2319_Regression/run_test.pl:
        * tests/Bug_2345_Regression/run_test.pl:
          Converted to the new test framework

Mon Nov 10 23:21:57 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/IFR_Service/Makefile.am:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Bug_3495_Regression.mpc:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/client.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Makefile.am:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/run_test.pl:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/server.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Test.idl:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.cpp:
        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.h:
        * orbsvcs/tests/InterfaceRepo/Makefile.am:

          Added regression test for bug 3495.

Mon Nov 10 20:14:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1693_Test/run_test.pl:
        * tests/Bug_2085_Regression/run_test.pl:
        * tests/Bug_2809_Regression/run_test.pl:
        * tests/Bug_3042_Regression/run_test.pl:
        * tests/Bug_3315_Regression/run_test.pl:
        * tests/Bug_3321_Regression/run_test.pl:
        * tests/Collocation_Opportunities/run_test.pl:
        * tests/IORManipulation/run_test.pl:
        * tests/Oneway_Send_Timeouts/run_test.pl:
        * tests/ORB_destroy/run_test.pl:
        * tests/ORB_init/run_test.pl:
        * tests/Permanent_Forward/run_test.pl:
        * tests/POA/Adapter_Activator/run_test.pl:
        * tests/POA/Bug_1592_Regression/run_test.pl:
        * tests/POA/Bug_2511_Regression/run_test.pl:
        * tests/POA/Current/run_test.pl:
        * tests/POA/Deactivate_Object/run_test.pl:
        * tests/POA/Default_Servant/run_test.pl: