@@ -1,3 +1,14 @@
+Tue Nov 11 12:02:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
+
+        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/client.cpp:
+        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/server.cpp:
+        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/Test.idl:
+        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.cpp:
+        * orbsvcs/tests/InterfaceRepo/Bug_3495_Regression/TestImpl.h:
+
+          Fixed the Fuzz errors from
+          Mon Nov 10 23:21:57 UTC 2008  Trevor Fields  <fields_t@ociweb.com>
+
 Tue Nov 11 08:02:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_2319_Regression/run_test.pl:
